added buttons to bottom of page

--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
 
                     </div>
 
+                    <br>
+
+                    <div class="row">
+
+                        <div class="col-md-1">
+
+                        </div>
+
+                        <div class="col-md-7">
+
+                            <button type="button" class="btn btn-danger">generate password</button>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                            <button type="button" class="btn btn-warning">copy to clipboard</button>
+
+                        </div>
+
+                    </div>
+
                 </div>
 
             </div>
