--- a/index.html
+++ b/index.html
@@ -144,4 +144,11 @@
 
 </body>
 
+<script>
+
+    var numberOptions = ["1","2","3","4","5","6","7","8","9","0"];
+    var letterOptions = ["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y","z"];
+    var characterOptions = ["!","'",'"',"#","$","%","&","(",")","*","+",",","-",".","/",":",";","<","=",">","?","@","[","]","^","_","`","{","|","}","~"];
+
+</script>
 </html>
