--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                         <div class="col-md-7">
 
-                            <button onclick="generatePassword()" type="button" class="btn btn-danger">generate password</button>
+                            <button onclick="generateButton()" type="button" class="btn btn-danger">generate password</button>
 
                         </div>
 
