replaced prompts and confirms with ids in html to retrieve user input

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="inputGroup-sizing-default">(8 - 128)</span>
                                 </div>
-                                <input type="text" class="form-control" aria-label="Sizing example input"
+                                <input placeholder = "pwlength" id="pwlength" type="text" class="form-control" aria-label="Sizing example input"
                                     aria-describedby="inputGroup-sizing-default">
                             </div>
 
@@ -119,13 +119,13 @@
 
                         <div class="col-md-7">
 
-                            <button onclick="generateButton()" type="button" class="btn btn-danger">generate password</button>
+                            <button placeholder="gbutton" id="gbutton" type="button" class="btn btn-danger">generate password</button>
 
                         </div>
 
                         <div class="col-md-4">
 
-                            <button onclick="copyPassword()"  type="button" class="btn btn-warning">copy to clipboard</button>
+                            <button placeholder="cbutton" id="cbutton" type="button" class="btn btn-warning">copy to clipboard</button>
 
                         </div>
 
