added event listeners for all buttons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="inputGroup-sizing-default">(8 - 128)</span>
                                 </div>
-                                <input placeholder = "pwlength" id="pwlength" type="text" class="form-control" aria-label="Sizing example input"
+                                <input id="pwlength" type="text" class="form-control" aria-label="Sizing example input"
                                     aria-describedby="inputGroup-sizing-default">
                             </div>
 
@@ -54,7 +54,7 @@
 
                                 <div class="col-md-6">
 
-                                    <input id = "chkUppercase" class="checkbox" type="checkbox" checked data-toggle="toggle"
+                                    <input id = "chkUppercase" class="checkbox" type="checkbox" unchecked data-toggle="toggle"
                                         data-size="normal" style="float: left;">
                                     <p>uppercase</p>
 
@@ -62,7 +62,7 @@
 
                                 <div class="col-md-6">
 
-                                    <input id = "chkLowercase" class="checkbox" type="checkbox" checked data-toggle="toggle"
+                                    <input id = "chkLowercase" class="checkbox" type="checkbox" unchecked data-toggle="toggle"
                                         data-size="normal" style="float: left;">
                                     <p>lowercase</p>
                                 </div>
@@ -73,14 +73,14 @@
 
                                 <div class="col-md-6">
 
-                                    <input id = "chkNumbers" class="checkbox" type="checkbox" checked data-toggle="toggle"
+                                    <input id = "chkNumbers" class="checkbox" type="checkbox" unchecked data-toggle="toggle"
                                         data-size="normal" style="float: left;">
                                     <p>numbers</p>
                                 </div>
 
                                 <div class="col-md-6">
 
-                                    <input id = "chkSymbols" class="checkbox" type="checkbox" checked data-toggle="toggle"
+                                    <input id = "chkSymbols" class="checkbox" type="checkbox" unchecked data-toggle="toggle"
                                         data-size="normal" style="float: left;">
                                     <p>symbols</p>
                                 </div>
