started coding function to generate password user selected criteria

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
                         <div class="col-md-12">
 
-                            <div class="alert alert-dark" role="alert">
-                                asdf32a1sdf3a1sdf54asd654fas3df1
+                            <div id="passwordDisplay" class="alert alert-dark" role="alert">
+                                
                             </div>
 
                         </div>
