corrected overflowing text in password display field and added js to prevent password from generating if incorrect # is input

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                         <div class="col-md-12">
 
-                            <div id="passwordDisplay" class="alert alert-dark" role="alert">
+                            <div id="passwordDisplay" class="alert alert-dark " role="alert" style="word-wrap:break-word">
                                
                             </div>
 
@@ -119,13 +119,13 @@
 
                         <div class="col-md-7">
 
-                            <button placeholder="gbutton" id="gbutton" type="button" class="btn btn-danger">generate password</button>
+                            <button id="gbutton" type="button" class="btn btn-danger">generate password</button>
 
                         </div>
 
                         <div class="col-md-4">
 
-                            <button placeholder="cbutton" id="cbutton" type="button" class="btn btn-warning">copy to clipboard</button>
+                            <button  id="cbutton" type="button" class="btn btn-warning">copy to clipboard</button>
 
                         </div>
 
