added parenthesis option password and ability to copy to clipboard

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                                
                             </div>
 
+                            <input type="text" class="passwordText">
+
                         </div>
 
                     </div>
